Fixed incorrect behavior that was due to a repurposed verification field

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -477,7 +477,7 @@ en:
 
     violation:
       violation: "Violation"
-      pending: 'Pending Verification'
+      pending: 'Report pending verification'
       killing: "Killing"
       maiming: "Maiming"
       recruitment: "Recruitment and/or use"
