updated perpetrator form per specs. Made changes to incident filter related to splitting armed_force_or_group_name into 2 fields. Fixed issue with Guiding Text on radio buttons on subforms

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -416,7 +416,8 @@ en:
       incident_location: "Incident Location:"
       incident_date: "Incident Date:"
       unaccompanied_separated_status: "Protection Status:"
-      armed_force_group_name: "Armed Force or Group:"
+      armed_force_name: "Armed Force:"
+      armed_group_name: "Armed Group:"
       armed_force_group_type: "Armed Force or Group Type:"
       record_state: "Record State:"
       interview_date: "Interview Date:"
