--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -473,6 +473,7 @@ en:
 
     actions:
       change_log: "Change Log"
+      delete_document: "Delete document?"
 
     history_of: "History of %{short_id}"
 
@@ -1055,6 +1056,7 @@ en:
     upload_bia_document: "BIA Document"
     upload_bid_document: "BID Document"
     upload_other_document: "Other Document"
+    upload_supporting_material: "File"
 
 
   replication:
